[package]
name = "imsosorrybtw"
description = "Sometimes it can be necessary to call upon the ancient arts... But in Rust BTW!"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/letsbuilda/imsosorrybtw"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
